update logo header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rangga Dwi Portofolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo-header.png" type="image/png" sizes="40x40">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -50,7 +51,7 @@
             </div>
 
             <div class="btn-box">
-                <a href="#" class="btn">Download CV</a>
+                <a href="https://drive.google.com/uc?export=download&id=1HBL4DmddNVjuqp1i3VTS3Y0EKtEf3R8J" class="btn">Download CV</a>
                 <a href="https://wa.me/+62895705458597?text=Hello!%20I%20am%20interested%20in%20discussing%20further%20about%20the%20work%20you%20can%20do.%20Can%20we%20talk%20more%20about%20the%20project?%20Thank%20you!" class="btn">Hire Me Now!</a>
             </div>
 
