update portofolio seminar

--- a/index.html
+++ b/index.html
@@ -488,10 +488,26 @@
                 </div>
                 <div class="port-box mix event">
                     <div class="port-image">
+                        <img src="img/event/Seminar 1 UPB.png" alt="">
+                    </div>
+                    <div class="port-content">
+                        <h3>Seminar Pengenalan dan Pengembangan Aplikasi Mobile Menggunakan Flutter</h3>
+                    </div>
+                </div>
+                <div class="port-box mix event">
+                    <div class="port-image">
+                        <img src="img/event/Seminar 2 UPB.jpg" alt="">
+                    </div>
+                    <div class="port-content">
+                        <h3>Seminar Integrasi Teknologi Cerdas Dalam Pengembangan Aplikasi Mobile</h3>
+                    </div>
+                </div>
+                <div class="port-box mix event">
+                    <div class="port-image">
                         <img src="img/event/SharingSession GDSC.jpg" alt="">
                     </div>
                     <div class="port-content">
-                        <h3>GGSC Sharing Session</h3>
+                        <h3>GDSC Sharing Session</h3>
                     </div>
                 </div>
                 <div class="port-box mix event">
@@ -723,19 +739,27 @@
                 </div>
                 <div class="port-box mix certificate">
                     <div class="port-image">
+                        <img src="img/certificate/SEMINAR 1 UPB.jpg" alt="">
+                    </div>
+                    <div class="port-content">
+                        <h3>Seminar Pengenalan dan Pengembangan Aplikasi Mobile Menggunakan Flutter</h3>
+                    </div>
+                </div>
+                <div class="port-box mix certificate">
+                    <div class="port-image">
                         <img src="img/certificate/Event Manager-Duta.png" alt="">
                     </div>
                     <div class="port-content">
                         <h3>Event Manager Duta</h3>
                     </div>
                 </div>
-                
-                <!-- <div class="port-box mix certificate ">
+<!--                 
+                <div class="port-box mix certificate ">
                     <div class="port-image">
                         <img src="img/certificate/Sertifikat 1.jpg" alt="">
                     </div>
                     <div class="port-content">
-                        <h3>IT Mobile Developer</h3>
+                        <h3>BNSP Junior Mobile Programmer</h3>
                     </div>
                 </div>
                 
@@ -744,7 +768,7 @@
                         <img src="img/certificate/Sertifikat 2.jpg" alt="">
                     </div>
                     <div class="port-content">
-                        <h3>IT Mobile Developer</h3>
+                        <h3>BNSP Junior Mobile Programmer</h3>
                     </div>
                 </div> -->
                 <div class="port-box mix certificate">
