--- a/index.html
+++ b/index.html
@@ -426,6 +426,71 @@
         </div>
 
         <div class="portofolio-gallery scroll-bottom">
+          <div class="port-box mix web">
+            <div class="port-image">
+              <img src="img/web/cashlesspay-web.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>CashlessPay Web</h3>
+            </div>
+          </div>
+          <div class="port-box mix web">
+            <div class="port-image">
+              <img src="img/web/stablex-demo.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>StableX Demo</h3>
+            </div>
+          </div>
+          <div class="port-box mix web">
+            <div class="port-image">
+              <img src="img/web/mcp.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>MCP Web</h3>
+            </div>
+          </div>
+          <div class="port-box mix mobile">
+            <div class="port-image">
+              <img src="img/mobileApp/rasa-chatbot.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>Rasa Chatbot LLM</h3>
+            </div>
+          </div>
+          <div class="port-box mix mobile">
+            <div class="port-image">
+              <img src="img/mobileApp/umkm.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>UMKM Mobile</h3>
+            </div>
+          </div>
+          <div class="port-box mix mobile">
+            <div class="port-image">
+              <img src="img/mobileApp/canvasser.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>Canvasser Mobile</h3>
+            </div>
+          </div>
+          <div class="port-box mix web">
+            <div class="port-image">
+              <img src="img/web/siadin-web.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>Siadin Web</h3>
+            </div>
+          </div>
+          <div class="port-box mix web">
+            <div class="port-image">
+              <img src="img/web/kaisar-web.png" alt="" />
+            </div>
+            <div class="port-content">
+              <h3>Kaisar Barbershop Academy</h3>
+            </div>
+          </div>
+
           <div class="port-box mix mobile">
             <div class="port-image">
               <img src="img/mobileApp/Store App.png" alt="" />
@@ -546,14 +611,7 @@
               <h3>Virtual Wedding App</h3>
             </div>
           </div>
-          <div class="port-box mix web">
-            <div class="port-image">
-              <img src="img/web/Kaisar Barbershop.png" alt="" />
-            </div>
-            <div class="port-content">
-              <h3>Web Kaisar Barbershop</h3>
-            </div>
-          </div>
+
           <div class="port-box mix web">
             <div class="port-image">
               <img src="img/web/Maxwell Hotel.png" alt="" />
