--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               </div>
             </div>
             <div class="box">
-              <div class="circle" data-dots="80" data-percent="90"></div>
+              <div class="circle" data-dots="80" data- percent="90"></div>
               <div class="text">
                 <big>90%</big>
                 <small>Adaptability</small>
@@ -426,7 +426,7 @@
         </div>
 
         <div class="portofolio-gallery scroll-bottom">
-          <div class="port-box mix web">
+          <!-- <div class="port-box mix web">
             <div class="port-image">
               <img src="img/web/cashlesspay-web.png" alt="" />
             </div>
@@ -449,7 +449,7 @@
             <div class="port-content">
               <h3>MCP Web</h3>
             </div>
-          </div>
+          </div> -->
           <div class="port-box mix mobile">
             <div class="port-image">
               <img src="img/mobileApp/rasa-chatbot.png" alt="" />
